--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -1,25 +1,26 @@
-akka {
+sbt-web {
+  akka {
+    sites {
+      url = "http://localhost:11800/cs"
+      user = "fwadmin"
+      pass = "xceladmin"
+    }
 
-  sites {
-    url = "http://localhost:11800/cs"
-    user = "fwadmin"
-    pass = "xceladmin"
-  }
+    // no dead letters
+    log-dead-letters-during-shutdown = false
 
-  // no dead letters
-  log-dead-letters-during-shutdown = false
+    // use logback for logging
+    loggers = ["akka.event.slf4j.Slf4jLogger"]
+    loglevel = "DEBUG"
+    logging-filter = "akka.event.slf4j.Slf4jLoggingFilter"
 
-  // use logback for logging
-  loggers = ["akka.event.slf4j.Slf4jLogger"]
-  loglevel = "DEBUG"
-  logging-filter = "akka.event.slf4j.Slf4jLoggingFilter"
-
-  // debugging options
-  debug {
-    receive = off
-    autoreceive = off
-    lifecycle = off
-    fsm = off
-    event-stream = off
+    // debugging options
+    debug {
+      receive = off
+      autoreceive = off
+      lifecycle = off
+      fsm = off
+      event-stream = off
+    }
   }
 }
