working wem:get/put/post/delete commands

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -16,11 +16,34 @@ sbt-web {
 
     // debugging options
     debug {
-      receive = off
-      autoreceive = off
-      lifecycle = off
-      fsm = off
-      event-stream = off
+      receive = on
+      autoreceive = on
+      lifecycle = on
+      fsm = on
+      event-stream = on
+    }
+  }
+
+  spray.can {
+
+    client {
+
+      proxy {
+        # Proxy settings for unencrypted HTTP requests
+        # Set to 'none' to always connect directly, 'default' to use the system
+        # settings as described in http://docs.oracle.com/javase/6/docs/technotes/guides/net/proxies.html
+        # or specify the proxy host, port and non proxy hosts as demonstrated
+        # in the following example:
+        # http {
+        #   host = myproxy.com
+        #   port = 8080
+        #   non-proxy-hosts = ["*.direct-access.net"]
+        # }
+        #http {
+        #  host = 192.168.1.168
+        #  port = 8081
+        #}
+      }
     }
   }
 }
