implementing a connection from the Annotation processor to the Akka backend - unfortunately using a intermediate file

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -1,18 +1,19 @@
 sbt-web {
   akka {
+
     sites {
       url = "http://localhost:11800/cs"
       user = "fwadmin"
       pass = "xceladmin"
     }
 
-    // no dead letters
-    log-dead-letters-during-shutdown = false
-
     // use logback for logging
     loggers = ["akka.event.slf4j.Slf4jLogger"]
     loglevel = "DEBUG"
     logging-filter = "akka.event.slf4j.Slf4jLoggingFilter"
+
+    // no dead letters
+    log-dead-letters-during-shutdown = false
 
     // debugging options
     debug {
@@ -22,27 +23,17 @@ sbt-web {
       fsm = on
       event-stream = on
     }
-  }
 
-  spray.can {
-
-    client {
-
-      proxy {
-        # Proxy settings for unencrypted HTTP requests
-        # Set to 'none' to always connect directly, 'default' to use the system
-        # settings as described in http://docs.oracle.com/javase/6/docs/technotes/guides/net/proxies.html
-        # or specify the proxy host, port and non proxy hosts as demonstrated
-        # in the following example:
-        # http {
-        #   host = myproxy.com
-        #   port = 8080
-        #   non-proxy-hosts = ["*.direct-access.net"]
-        # }
-        #http {
-        #  host = 192.168.1.168
-        #  port = 8081
-        #}
+    actor {
+      provider = "akka.remote.RemoteActorRefProvider"
+    }
+    remote {
+      transport = "akka.remote.netty.NettyRemoteTransport"
+      //log-sent-messages = on
+      //log-received-messages = on
+      netty {
+        hostname = "127.0.0.1"
+        port = 5150
       }
     }
   }
