--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -9,31 +9,20 @@ sbt-web {
 
     // use logback for logging
     loggers = ["akka.event.slf4j.Slf4jLogger"]
-    loglevel = "DEBUG"
     logging-filter = "akka.event.slf4j.Slf4jLoggingFilter"
+    log-dead-letters-during-shutdown = true
 
     // no dead letters
-    log-dead-letters-during-shutdown = false
 
     // debugging options
-    debug {
-      receive = on
-      autoreceive = on
-      lifecycle = on
-      fsm = on
-      event-stream = on
-    }
-
+    loglevel = "DEBUG"
     actor {
-      provider = "akka.remote.RemoteActorRefProvider"
-    }
-    remote {
-      transport = "akka.remote.netty.NettyRemoteTransport"
-      //log-sent-messages = on
-      //log-received-messages = on
-      netty {
-        hostname = "127.0.0.1"
-        port = 5150
+      debug {
+        receive = on
+        lifecycle = on
+        autoreceive = on
+        fsm = off
+        event-stream = on
       }
     }
   }
