ng:deploy saying 'hello world'

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -18,11 +18,11 @@ sbt-web {
     loglevel = "DEBUG"
     actor {
       debug {
-        receive = on
-        lifecycle = on
-        autoreceive = on
+        receive = off
+        lifecycle = off
+        autoreceive = off
+        event-stream = off
         fsm = off
-        event-stream = on
       }
     }
   }
