service now able to login

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -18,8 +18,8 @@ sbt-web {
     loglevel = "DEBUG"
     actor {
       debug {
-        receive = off
-        lifecycle = off
+        receive = on
+        lifecycle = on
         autoreceive = off
         event-stream = off
         fsm = off
